BZR-21 Реализовать эндпоинт DELETE /chats/{chatId}/messages (#16)
