# src/main/java/org/bazar/chat/app/api/message/MessageService.java
@@ -4,8 +4,12 @@ import org.bazar.chat.app.api.message.dto.CreateMessageDto;
 import org.bazar.chat.app.api.message.dto.GetMessagePageDto;
 import org.springframework.data.domain.Pageable;
 
+import java.util.List;
+
 public interface MessageService {
     GetMessagePageDto getChatMessages(Long chatId, Pageable pageable);
 
     void createMessage(CreateMessageDto dto);
+
+    void deleteMessages(Long chatId, List<Long> messageIds);
 }
